objects/Survey__c.object
<CustomObject>
    <description>Used by Specialty Finance to capture survey results</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funds_Still_Needed__c</fullName>
        <label>Funds Still Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sufficient_Money_Received__c</fullName>
        <label>Sufficient Money Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Completed_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Completed With</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please only select a Specialty Finance - Originator account record.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Specialty Finance - Originator</value>
            </filterItems>
            <infoMessage>Only Specialty Finance - Originator records will be returned.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys (Transaction Completed With)</relationshipLabel>
        <relationshipName>Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Rating__c</fullName>
        <inlineHelpText>1 = Worst, 5 = Best</inlineHelpText>
        <label>Transaction Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Reason__c</fullName>
        <label>Transaction Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <displayFormat>SURV-{000000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>